--- a/Example/ComputerVisionAzure.xcodeproj/xcshareddata/xcschemes/ComputerVisionAzure-Example.xcscheme
+++ b/Example/ComputerVisionAzure.xcodeproj/xcshareddata/xcschemes/ComputerVisionAzure-Example.xcscheme
@@ -73,9 +73,9 @@
       </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
-            key = "OS_ACTIVITY_MODE"
-            value = "disable"
-            isEnabled = "NO">
+            key = "SUBSCRIPTION_KEY"
+            value = "44af5a7da8b942bdbbaa3046f6a667d8"
+            isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
       <AdditionalOptions>
